updated controller & service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+#DB Configuration
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecom_product
+spring.datasource.username=nagavivek
+spring.datasource.password=mypassword
+logging.level.org.springframework.security=trace
