--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,16 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.show-sql=true
 
 #Local Postgres DB config
-#spring.datasource.url=jdbc:postgresql://localhost:5432/ecom_product
-#spring.datasource.username=nagavivek
-#spring.datasource.password=mypassword
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecom_user_db
+spring.datasource.username=nagavivek
+spring.datasource.password=mypassword
 
 #RDS Configuration
-spring.datasource.url=jdbc:postgresql://user-service-db.ch82yq6o4m0y.ap-south-1.rds.amazonaws.com:5432/postgres
-spring.datasource.username=userservice
-spring.datasource.password=userservice
+#spring.datasource.url=jdbc:postgresql://user-service-db.ch82yq6o4m0y.ap-south-1.rds.amazonaws.com:5432/postgres
+#spring.datasource.username=userservice
+#spring.datasource.password=userservice
 
 logging.level.org.springframework.security=trace
+
+#Server Configuration
+server.port=9090
