--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,11 +10,16 @@ spring.datasource.username=nagavivek
 spring.datasource.password=mypassword
 
 #RDS Configuration
-#spring.datasource.url=jdbc:postgresql://user-service-db.ch82yq6o4m0y.ap-south-1.rds.amazonaws.com:5432/postgres
+#spring.datasource.url=jdbc:postgresql://userservice-db.ch82yq6o4m0y.ap-south-1.rds.amazonaws.com:5432/postgres
 #spring.datasource.username=userservice
 #spring.datasource.password=userservice
 
-logging.level.org.springframework.security=trace
+#logging.level.org.springframework.security=trace
 
 #Server Configuration
 server.port=9090
+
+
+spring.kafka.producer.bootstrap-servers: localhost:9092
+spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer: org.apache.kafka.common.serialization.StringSerializer
