--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/ecom_user_db
 spring.datasource.username=nagavivek
 spring.datasource.password=mypassword
 
+#Secret Key Configuration
+jwt.secret=${SECRET_KEY}
+
 #RDS Configuration
 #spring.datasource.url=jdbc:postgresql://userservice-db.ch82yq6o4m0y.ap-south-1.rds.amazonaws.com:5432/postgres
 #spring.datasource.username=userservice
@@ -17,9 +20,15 @@ spring.datasource.password=mypassword
 #logging.level.org.springframework.security=trace
 
 #Server Configuration
-server.port=9090
+server.port=${SERVER_PORT}
 
+#Eureka Client
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+spring.application.name=userservice
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
+#Kafka Producer Configuration
 spring.kafka.producer.bootstrap-servers: localhost:9092
 spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer: org.apache.kafka.common.serialization.StringSerializer
